# group_project_490_backend

./: .tmp_enum_check.py  CHANGELOG.md  README.md  pyproject.toml  repro.db  requirements.txt  supabase_synced.sql
.claude/: settings.local.json
.github/workflows/: pytest.yml
flows/auth/: authorized_request_flow.md  google_oauth.md
flows/cascade/: client_role_cascade_reach.md  coach_role_cascade_reach.md
flows/payment/: payment_flow.md
src/: __init__.py
src/api/: app.py  dependencies.py
src/api/auth/: auth.py  domain.py  services.py
src/api/roles/: client.py  coach.py  domain.py  services.py
src/api/roles/admin/: admin.py  domain.py
src/api/roles/client/: client.py  domain.py  fitness.py  telemetry.py
src/api/roles/coach/: coach.py  domain.py  fitness.py
src/api/roles/shared/: account.py  chat.py  client_coach_relationship.py  domain.py
src/database/: __init__.py  base.py  session.py
src/database/account/: models.py
src/database/admin/: models.py
src/database/base-accounts/: models.py
src/database/client/: models.py
src/database/coach/: models.py
src/database/coach_client_relationship/: models.py
src/database/meal/: models.py
src/database/payment/: models.py  services.py
src/database/reports/: models.py
src/database/role_management/: models.py
src/database/telemetry/: __init__.py  models.py
src/database/workouts_and_activities/: models.py
src/scripts/: admin_promotion.py  reset_production_database.py  reset_testing_database.py
src/scripts/seed/coach/: coaches.json  seed.py
src/scripts/seed/meals/: meals.json  seed.py
src/scripts/seed/workout/: seed.py  workouts.json
tests/: README.md  conftest.py  test_admin.py  test_auth.py  test_client.py  test_coach.py  test_coach_lookup.py  test_fitness.py  test_hirable_coaches.py  test_payments.py  test_shared_account_activation.py  test_shared_account_update.py  test_uploads.py
tests/payload_tools/: auth.py  client.py  coach.py
