[project]
name = "group-project-490-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.6",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.6",
    "ecdsa==0.19.2",
    "fastapi==0.135.2",
    "google-auth==2.49.1",
    "greenlet==3.3.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "iniconfig==2.3.0",
    "packaging==26.0",
    "pluggy==1.6.0",
    "psycopg2==2.9.11",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.20.0",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "requests==2.33.1",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.48",
    "sqlmodel==0.0.37",
    "starlette==1.0.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.42.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = [
    "ignore:datetime.datetime.utcnow\\(\\) is deprecated:DeprecationWarning",
    "ignore:The `dict` method is deprecated:DeprecationWarning",
]
